--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,8 @@
             </div><!-- container-end -->
         </nav><!-- navbar-end -->
     </header>
-
+    
+    <!-- capa -->
     <section class="capa">
       <h1>Música para todos.</h1>
       <div>
@@ -47,6 +48,81 @@
         <button type="button" class="btn branco">Obtenha Spotify Premium</button>
       </div>
     </section>
+
+    <!-- conteudo -->
+    <section class="conteudo">
+        <div class="container">
+            <div class="row">
+                <!-- o que o spotify tem ? -->
+                <div class="col-md-6">
+                    <div class="o-que-o-spotify-tem">
+                        o que o spotify tem?
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    albuns
+                </div>
+            </div>
+        </div>
+    </section>
+        
+    <!-- RODAPÉ -->
+    <footer class="rodape">
+      <div class="container">
+        <div class="row">
+
+            <!-- BRAND-LOGO -->
+            <div class="col-md-2">
+              <figure>
+                <a href="index.html">
+                  <img src="img/spotify.svg" alt="spotify-logo" height="35">
+                </a>
+                <figcaption class="sr-only">logo spotify</figcaption>
+              </figure>
+            </div>
+
+            <!-- LINKS-EMRPESAS -->
+            <div class="col-md-2">
+              <ul>
+                <li >empresa</li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Empregos</a></li>
+                <li><a href="#">Imprensa</a></li>
+                <li><a href="#">Novidades</a></li>
+              </ul>
+            </div>
+
+            <!-- LINKS-COMUNIDADES -->
+            <div class="col-md-2">
+              <ul>
+                <li >comunidades</li>
+                <li><a href="#">Para Artistas</a></li>
+                <li><a href="#">Desenvolvedores</a></li>
+                <li><a href="#">Marcas</a></li>
+              </ul>
+            </div>
+
+            <!-- LINKS-UTEIS -->
+            <div class="col-md-2">
+              <ul>
+                <li >links uteis</li>
+                <li><a href="#">Ajuda</a></li>
+                <li><a href="#">Presente</a></li>
+                <li><a href="#">Player na Web</a></li>
+              </ul>
+            </div>
+
+            <div class="col-md-4">
+               <figure>
+                  <a href="#"><img src="img/instagram.png" alt="Logo Instagram"></a>
+                  <a href="#"><img src="img/twitter.png" alt="logo twitter"></a>
+                  <a href="#"><img src="img/facebook.png" alt="logo facebook"></a>
+               </figure>
+            </div>
+
+         </div> <!-- FIM ROW RODAPE -->
+      </div> <!-- FIM CONTAINER RODAPE -->
+    </footer> <!-- FIM RODAPE -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
