--- a/src/index.html
+++ b/src/index.html
@@ -54,17 +54,59 @@
         <div class="container">
             <div class="row">
                 <!-- o que o spotify tem ? -->
-                <div class="col-md-6">
+                <div class="col-md-5">
                     <div class="o-que-o-spotify-tem">
-                        o que o spotify tem?
+                        <h1>O que o Spotify tem?</h1>
+                        <h4>Músicas</h4>
+                        <p>O Spotify tem milhões de músicas. Escute seus sons favoritos, descubra novas músicas e reúna seus favoritos em um só lugar.</p>
+
+                        <h4>Playlists</h4>
+                        <p>No Spotify você encontra uma playlist para cada momento. Todas feitas por fanáticos e especialistas da música.</p>
+
+                        <h4>Novos lançamentos</h4>
+                        <p>Escute os novos lançamentos de singles e álbuns da semana e veja o que está bombando no Top 50.</p>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    albuns
+                <div class="col-md-7">
+                    <figure>
+                      <img src="img/img1.jpg" alt="" height="250">
+                      <img src="img/img2.jpg" alt="" height="250">
+                      <img src="img/img3.jpg" alt="" height="250">
+                      <img src="img/img4.jpg" alt="" height="250">
+                    </figure>
                 </div>
             </div>
         </div>
-    </section>
+    </section> <!-- FIM O QUE O SPOTIFY TEM -->
+
+    <!-- SERVICOS -->
+    <section class="servicos">
+      <div class="container">
+        <div class="row">
+
+          <!-- IPHONES -->
+          <div class="col-md-8">
+            <figure>
+              <img src="img/iphone1.png" alt="">
+              <img src="img/iphone2.png" alt="">
+            </figure>
+          </div> <!-- FIM IPHONE -->
+
+          <!-- DESCRICAO -->
+          <div class="col-md-4">
+            <h1>Fácil.</h1>
+            <h3>Buscar</h3>
+            <p>Já sabe o que quer escutar? É só procurar e apertar o play.</p>
+
+            <h3>Navegar</h3>
+            <p>Veja os novos lançamentos, o que está bombando nas paradas e as melhores playlists para o seu momento.</p>
+
+            <h3>Descobrir</h3>
+            <p>Curta músicas novas toda segunda-feira com uma playlist personalizada pra você. Ou relaxe e curta uma das rádios.</p>
+          </div> <!-- FIM DESCRICAO -->
+        </div>
+      </div>
+    </section> <!-- FIM SERVICOS -->
         
     <!-- RODAPÉ -->
     <footer class="rodape">
@@ -112,8 +154,10 @@
               </ul>
             </div>
 
+
+            <!-- REDES SOCIAIS -->
             <div class="col-md-4">
-               <figure>
+               <figure class="rodape-rede-social">
                   <a href="#"><img src="img/instagram.png" alt="Logo Instagram"></a>
                   <a href="#"><img src="img/twitter.png" alt="logo twitter"></a>
                   <a href="#"><img src="img/facebook.png" alt="logo facebook"></a>
@@ -121,8 +165,28 @@
             </div>
 
          </div> <!-- FIM ROW RODAPE -->
+
+         <!-- OUTROS LINKS -->
+         <div class="row">  
+            <div class="col-md-7">  
+              <nav class="outros-links">
+                <ul class="nav">
+                  <li class="nav-item"><a href="#" class="nav-link">  Legal</a></li>
+                  <li class="nav-item"><a href="#" class="nav-link">  Privacidade</a></li>
+                  <li class="nav-item"><a href="#" class="nav-link">  Cookies</a></li>
+                  <li class="nav-item"><a href="#" class="nav-link">  Sobre anúncios</a></li>
+                </ul>
+              </nav>
+            </div>
+
+            <div class="col-md-5 d-flex align-items-end justify-content-end">
+              <p>&copy; 2018 Spotify AB</p>
+            </div>
+         </div>
+
       </div> <!-- FIM CONTAINER RODAPE -->
     </footer> <!-- FIM RODAPE -->
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
